Fix bad button placement when left and right panes are collapsed

--- a/polynote-frontend/style/styles.less
+++ b/polynote-frontend/style/styles.less
@@ -2095,7 +2095,7 @@ button {
         transform-origin: bottom left;
         width: fit-content;
 
-        .buttons {
+        .left-buttons, .right-buttons {
           display: none;
         }
       }
@@ -2128,7 +2128,7 @@ button {
           transform-origin: bottom left;
           width: fit-content;
 
-          .buttons {
+          .left-buttons, .right-buttons {
             display: none;
           }
         }
